# chat-companion-

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
companion/: __init__.py  config.py
companion/admin/: index.html
companion/api/: __init__.py  admin_routes.py  dependencies.py  main.py  middleware.py  routes.py  schemas.py
companion/infra/: __init__.py  db.py  logging.py
companion/prompts/: __init__.py  system.py
companion/services/: __init__.py  admin.py  auth.py  chat.py  history.py  llm.py  safety.py  stats.py  summary.py
companion/tests/: conftest.py  test_flow.py
examples/: README.md  env.cerebras.example  multi_user_chat.py  two_user_chat.py
