[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "companion"
version = "0.1.0"
description = "Chat companion for a private women-only cancer-support community."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["companion*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["companion/tests"]
filterwarnings = [
    "ignore::DeprecationWarning:langchain.*",
    "ignore::DeprecationWarning:pydantic.*",
]
